--- a/main.css
+++ b/main.css
@@ -6,6 +6,10 @@
     box-sizing: border-box;
 }
 
+:root {
+    --swiper-theme-color: white;
+}
+
 a{
     text-decoration: none;
 }
@@ -142,7 +146,7 @@ h2.menu_title{
 
 /*섹션별 배경, 이미지, 컬러 지정*/
 .container section:nth-child(1){
-    background: #cccab5 url(./img/bg1.jpg);
+    background: #cccab5;
     background-size: cover;
     background-attachment: fixed;
 }
@@ -206,7 +210,7 @@ h2.menu_title{
 .testimonials{
     position: relative;
     max-width: 100%;
-    -webkit-box-reflect: below 1px linear-gradient(transparent 70%, #0009);
+    /* -webkit-box-reflect: below 1px linear-gradient(transparent 70%, #0009); */
 }
 
 .swiper-wrapper{
@@ -217,8 +221,8 @@ h2.menu_title{
     background-position: center;
     background-size: cover;
     width: 350px;
-    min-height: 350px;
-    background-color: #fff;
+    /* height: 400px; */
+    background-color: transparent;
     margin: 0 20px;
 }
 
@@ -231,9 +235,9 @@ h2.menu_title{
     position: relative;
     width: 100%;
     margin: 0 auto;
-    background-color: #333;
-    padding: 60px 60px;
-    text-align: center;
+    background-color: rgba(255,255,255,0.5);
+    padding: 128px 60px;
+    text-align: left;
     overflow: hidden;
 }
 
@@ -243,7 +247,7 @@ h2.menu_title{
     left: 0;
     width: 100%;
     height: 100%;
-    background: linear-gradient(#03a9f4, #e91ee3);
+    background: rgba(255,255,255,0.8);
     z-index: 1;
     transition: all 0.5s;
 }
@@ -261,7 +265,7 @@ h2.menu_title{
     font-size: 18px;
     line-height: 24px;
     margin-bottom: 20px;
-    color: #fff;
+    color: #4a4940;
 }
 
 .testimonials .card .card-content .imgBx{
@@ -276,18 +280,36 @@ h2.menu_title{
 
 .testimonials .card .card-content h2{
     font-size: 18px;
-    color: #fff;
+    color: #cccab5;
+    font-weight: 300;
+    transition: all 0.25s;
+}
+.testimonials .card:hover .card-content h2{
+    color: #969584;
 }
 
 .testimonials .card .card-content h2 span { 
-    color: #03a9f4;
+    color: #cccab5;
     font-size: 14px;
     transition: 0.5s;
+    transition: all 0.25s;
 }
 
 .testimonials .card:hover .card-content h2 span {
-    color: #fff;
+    color: #969584;
 }
+
+.swiper-pagination {
+    width: 100%;
+    margin-top: 30px;
+}
+
+.swiper-pagination span {
+    margin-left: 10px;
+}
+
+
+
 
 
 @keyframes fade {
