--- a/main.css
+++ b/main.css
@@ -28,6 +28,12 @@ a{
     background-color: #111;
 }
 
+h1{
+    position: absolute;
+    top: 20%;
+    font-weight: 300;
+}
+
 h2.menu_title{
     color:rgba(255,255,255,0.1);
     font-size: 8vw;
@@ -80,7 +86,7 @@ h2.menu_title{
     left: calc(25% * var(--i));
     width: 25%;
     height: 100%;
-    background: #102027;
+    background: rgb(23, 23, 23);
     transition: all 0.25s;
     border: 1px solid rgba(0, 0, 0, 0.25);
     transition-delay: calc(0.25s * var(--i));
@@ -116,17 +122,17 @@ h2.menu_title{
 
 .curtain ul li a{
     text-decoration: none;
-    font-size: 3em;
-    font-weight: 700;
-    color: #fff;
+    font-size: 2em;
+    font-weight: 500;
+    color: rgba(255,255,255,0.3);
     display: inline-block;
     padding: 5px 20px;
+    margin-top: 1em;
     transition: 0.5s ease-in-out;
 }
 
 .curtain ul li a:hover {
-    background:#fff;
-    color: #102027;
+    color: rgba(255,255,255,1);
 }
 
 
@@ -225,10 +231,10 @@ h2.menu_title{
 .swiper-slide {
     background-position: center;
     background-size: cover;
-    width: 350px;
+    width: 300px;
     /* height: 400px; */
     background-color: transparent;
-    margin: 0 20px;
+    margin: 0 10px;
 }
 
 .swiper-container-3d .swiper-slide-shadow-left,
@@ -238,12 +244,13 @@ h2.menu_title{
 
 .testimonials .card {
     position: relative;
-    width: 100%;
+    width: 80%;
     margin: 0 auto;
     background-color: rgba(255,255,255,0.5);
-    padding: 128px 60px;
+    padding: 130px 30px;
     text-align: left;
     overflow: hidden;
+    border-radius: 7px;
 }
 
 .testimonials .card .card-layer{
